2008-02-12  Kostas Poulios  <poulios.konstantinos@googlemail.com>

	* plot/__quiver__.m: make arrow head be in z-plane of the arrow
	body. Allow the linespec to specify the arrow color.

2008-02-12  David Bateman  <dbateman@free.fr>

	* miscellaneous/cast.m: Also treat the logical type.

	* plot/__go_draw_axes__.m: Set pm3d implict to fix colorbars on
	contour plots.

 	* plot/__go_draw_axes__.m: Use the cdatamapping property to set
	the cbrange.
	* plot/__img__.m: Set cdatamapping to "direct".
	* plot/imagesc.m: Set cdatamapping to "scaled".

2008-02-08  Julien Pommier  <pommier@pianoteq.com>

	* audio/wavread.m: Limit data read to end of data chunk.

2008-02-08  David Bateman  <dbateman@free.fr>

	* plot/__contour__.m: Respect the graphic handle options that are
	passed.
	* plot/__go_draw_axes__.m: Respect the linewidth for patch objects.

2008-02-01  Dave Goel  <deego3@gmail.com>

	* signal/arch_rnd.m: Correctly index E and Y vectors.

2008-02-01  Bill Denney  <bill@denney.ws>

	* time/weekday.m: Allow vector inputs and speed up.
	* time/eomday.m: Return column vector for column vector inputs.

2008-01-30  John W. Eaton  <jwe@octave.org>

	* miscellaneous/edit.m: Use "## Created: DATE" instead of "initial
	revision".

	* plot/Makefile.in (SOURCES): Include __plt2sv__.m and
	__plt2vs__.m in the list.

	* miscellaneous/tempdir.m: Append filesep to name for
	compatibility.  Warn if not a directory or directory does not
	exist.

	* strings/deblank.m: Improve compatibility.

2008-01-29  John W. Eaton  <jwe@octave.org>

	* strings/str2double.m: Delete unused variable FLAG_OCTAVE.

2008-01-28  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/xlabel.m, plot/ylabel.m, plot/zlabel.m:
	Return the label handle, not the current axis handle.

2008-01-25  Alexander Barth  <barth.alexander@gmail.com>

	* general/interpn.m: Compatibility fix. Don't ndgrid vector
	abscissa.
	
2008-01-25  David Bateman  <dbateman@free.fr>
